--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,7 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "code-runner.defaultLanguage": "c",
+  "terminal.integrated.defaultProfile.windows": "Git Bash"
 }
