--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "d:/code/C/linked_list",
-      "program": "d:/code/C/linked_list/linked_list.exe",
+      "externalConsole": false,
+      "cwd": "/Users/xiaoshanwei/code/C/linked_list",
+      "program": "/Users/xiaoshanwei/code/C/linked_list/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
